--- a/CRMInstanceAdapter/CRMInstanceAdapter/CRMInstanceAdapter.csproj
+++ b/CRMInstanceAdapter/CRMInstanceAdapter/CRMInstanceAdapter.csproj
@@ -59,30 +59,35 @@
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.DirectoryServices" />
-    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CrmHelpers\CrmAdapterUtilities.cs" />
-    <Compile Include="CrmHelpers\CrmServiceHelpers.cs" />
-    <Compile Include="CrmHelpers\DeviceIdManager.cs" />
-    <Compile Include="CrmHelpers\ErrorCodes.cs" />
+    <Compile Include="CrmHelpers\CrmServiceHelpers.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="CrmHelpers\DeviceIdManager.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
+    <Compile Include="CrmHelpers\ErrorCodes.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="ObjectProviders\CrmObjectProvider.cs" />
-    <Compile Include="ObjectProviders\DynamicObjectProvider.cs" />
+    <Compile Include="ObjectProviders\DynamicObjectProvider.cs">
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="ObjectProviders\PicklistObjectProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="DynamicCRMAdapter.cs" />
     <Compile Include="DynamicCRMAdapterDestination.cs" />
     <Compile Include="DynamicCRMAdapterSource.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="GlobalSuppressions.cs">
+      <ExcludeFromStyleCop>True</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -99,9 +104,6 @@
     <None Include="CRMInstanceAdapter.ruleset" />
     <None Include="ObjectConfig\PicklistObjectProvider.config" />
     <None Include="TestAdapterKey.pfx" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
