More style updates

--- a/CRMInstanceAdapter/CRMInstanceAdapter/CRMInstanceAdapter.csproj
+++ b/CRMInstanceAdapter/CRMInstanceAdapter/CRMInstanceAdapter.csproj
@@ -93,6 +93,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="RelationshipData.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Properties\Resources.resx">
